force-app/main/default/objects/Plan_Conversation__c/Plan_Conversation__c.object-meta.xml
<CustomObject>
    <description>One row per copilot conversation. Owned by the SF user it belongs to. Customer is the org tenant id (typically constant in single-customer deploys).</description>
    <label>Plan Conversation</label>
    <nameField>
        <displayFormat>CONV-{0000000000}</displayFormat>
        <label>Conversation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Conversations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>