force-app/main/default/objects/Plan_Conversation__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Tenant scoper. Constant per Vercel deploy via SF_CUSTOMER_ID; the SF org itself is the security boundary, this field is for label/audit.</description>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>