force-app/main/default/objects/Plan_Conversation__c/fields/Last_Activity_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_At__c</fullName>
    <description>Bumped on every appendTurn. Used for "most recent thread" queries (soft rollover).</description>
    <label>Last Activity At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>