force-app/main/default/objects/Plan_Conversation__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Auto-generated from the first user turn — first 80 chars. Editable by users.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>