force-app/main/default/objects/Plan_Conversation__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Salesforce User Id of the conversation owner. Threaded from UserInfo.getUserId() through the Apex gateway.</description>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>